examples/test/testpolicy7405.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7405
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key1: value29
      key29: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value19
          key14: value16
      podSelector:
        matchLabels:
          key37: value24
          key39: value4
